--- a/src/components/Button/button.style.css
+++ b/src/components/Button/button.style.css
@@ -1,16 +1,12 @@
 .button {
   border-radius: 8px;
   border: 1px solid transparent;
-  /* width: 15em; */
   width: 13em;
-  /* height: 3.5em; */
   height: 3em;
-  /* font-size: 1em; */
-  /* font-size: 1rem; */
+
   font-size: large;
   font-weight: 700;
   font-family: inherit;
-  //background-color: #1a1a1a;
   background-color: white;
   color: #3d3d3d;
   cursor: pointer;
@@ -18,8 +14,7 @@
   border-radius: 2em;
 }
 .button:hover {
-  /* border-color: #646cff; */
-  background-color: #ff8c00;
+  background-color: #7ed957;
   color: white;
 }
 .button:active {
@@ -27,7 +22,14 @@
   color: #3d3d3d;
 }
 
-/* .button:focus,
-.button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-} */
+@media (max-width: 720px) {
+  .button {
+    font-size: medium;
+  }
+}
+
+@media (max-width: 576px) {
+  .button {
+    font-size: small;
+  }
+}
