--- a/src/features/About/about.style.css
+++ b/src/features/About/about.style.css
@@ -2,3 +2,10 @@
   font-size: large;
   font-weight: bold;
 }
+
+@media (max-width: 768px) {
+  .about svg {
+    max-width: 50%;
+    margin-top: 4em;
+  }
+}
