--- a/src/features/Home/home.style.css
+++ b/src/features/Home/home.style.css
@@ -7,6 +7,16 @@
 }
 
 .home_text {
-  /* margin: 2em; */
   font-size: 1.4rem;
+}
+
+@media (max-width: 768px) {
+  .home_text {
+    font-size: 1.2rem;
+  }
+}
+@media (max-width: 576px) {
+  .home_text {
+    font-size: 1rem;
+  }
 }
