--- a/src/features/Navigation/navigation.style.css
+++ b/src/features/Navigation/navigation.style.css
@@ -3,37 +3,28 @@
   top: 0;
   left: 0;
   display: flex;
-
+  justify-content: center;
+  /* align-items: center; */
   width: 100%;
   text-align: center;
-  /* padding: 30px; */
   padding: 20px 0;
   background-color: #ffffff;
 }
 
 .navigation a {
   color: #2c3d50;
-  /* font-weight: 500; */
   font-weight: light;
   font-size: 1.4rem;
 }
 
 .navigation a:hover,
 a.active {
-  color: green;
+  color: #7ed957;
 }
 
-.logo {
-  /* position: absolute;
-  right: -5px;
-  left: -5px;
-  top: -5px; */
-  /* display: flex; */
-}
 .navigation svg {
   position: absolute;
   left: 25px;
-  /* top: 15px; */
   top: 7px;
   cursor: pointer;
 }
@@ -55,17 +46,50 @@ a.active {
   width: 30px;
   height: 30px;
 
-  /* right: -5px;
-  top: -5px; */
-
   font-size: small;
   display: flex;
   align-items: center;
   justify-content: center;
 
-  /* margin-top: -3em; */
-  /* margin-top: -4em; */
   margin-top: -46px;
-  /* margin-left: 7em; */
   margin-left: 132px;
+}
+
+.nav_modal {
+  color: black;
+  display: none;
+}
+
+@media (max-width: 768px) {
+  .links {
+    display: none;
+  }
+  .nav_svg {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .navigation {
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .navigation a {
+    font-size: 1.2rem;
+  }
+
+  .navigation svg {
+    position: static;
+    display: flex;
+    margin: 0 1em;
+  }
+  .nav_modal {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1em;
+  }
 }
