--- a/src/features/TaskList/taskList.style.css
+++ b/src/features/TaskList/taskList.style.css
@@ -76,7 +76,13 @@ h3 {
   margin-bottom: 3em;
 }
 
-.task_info input {
+/* .task_info input {
+  width: 2em;
+  height: 2em;
+  margin: 8px;
+  accent-color: #7ed957;
+} */
+.task_info__input {
   width: 2em;
   height: 2em;
   margin: 8px;
@@ -85,6 +91,18 @@ h3 {
 
 .task_KeepGoing {
   display: none;
+}
+
+.edit {
+}
+.edit_input {
+  border-radius: 2em;
+  border: 1px solid transparent;
+  width: 12em;
+  background-color: #dadada;
+  text-indent: 1em;
+  font-size: 1.2rem;
+  outline-color: #7ed957;
 }
 
 @media (max-width: 576px) {
