--- a/src/features/Modals/modals.style.css
+++ b/src/features/Modals/modals.style.css
@@ -8,7 +8,7 @@
   background: rgba(0, 0, 0, 0.75);
 }
 
-.modal {
+.card {
   position: fixed;
   width: 500px;
   height: 300px;
@@ -17,46 +17,68 @@
   margin-top: -100px;
   margin-left: -250px;
   z-index: 1000;
-  background: white;
+  /* background: white; */
+  background: lightgray;
   border-radius: 1em;
   overflow: hidden;
 }
 
-.update_title {
-  /* background-color: #2c3d50; */
+.modal {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.modal_title {
+  display: flex;
+  justify-content: center;
   background-color: #7ed957;
-  padding: 1em 0;
+  padding: 1em;
+  width: 100%;
+}
+.modal_question {
+  display: flex;
+  color: black;
 }
 
 .modal_input {
-  margin: 5em;
+  display: flex;
   width: 20em;
-  height: 2em;
+  height: 3em;
   border-radius: 1em;
   border: 1px solid #7ed957;
   text-indent: 1em;
   outline-color: #7ed957;
 }
 
+.buttons {
+  display: flex;
+  gap: 1em;
+  margin-bottom: 1em;
+}
+
 @media (max-width: 576px) {
-  .modal {
+  .card {
     width: 400px;
     height: 300px;
     margin-left: -200px;
   }
-  .modal_input {
-    margin: 5em;
-  }
 }
 
 @media (max-width: 420px) {
-  .modal {
+  .card {
     width: 300px;
-    height: 200px;
+    /* height: 200px; */
     margin-left: -150px;
   }
   .modal_input {
     margin: 3em;
     width: 12em;
+  }
+  .buttons {
+    flex-direction: column;
   }
 }
