--- a/src/features/TaskList/taskList.style.css
+++ b/src/features/TaskList/taskList.style.css
@@ -76,22 +76,6 @@ h3 {
   margin-bottom: 3em;
 }
 
-/* .task_info input {
-  width: 2em;
-  height: 2em;
-  margin: 8px;
-  accent-color: #7ed957;
-} */
-
-/* CHECKBOX*/
-
-/* .task_info__input {
-  width: 2em;
-  height: 2em;
-  margin: 8px;
-  accent-color: #7ed957;
-} */
-
 .task_info__input {
   margin-right: 8px;
   width: 2em;
@@ -123,6 +107,10 @@ h3 {
   text-indent: 1em;
   font-size: 1.2rem;
   outline-color: #7ed957;
+}
+
+.task_checked {
+  text-decoration: line-through;
 }
 
 @media (max-width: 576px) {
