--- a/src/features/About/about.style.css
+++ b/src/features/About/about.style.css
@@ -1,6 +1,21 @@
 .about {
-  font-size: large;
-  font-weight: bold;
+  /* font-size: large;
+  font-weight: bold; */
+  font-size: medium;
+}
+
+.about_profile {
+  width: 400px;
+  height: 400px;
+  object-fit: cover;
+  object-position: 50% 30%;
+  border-radius: 50%;
+}
+
+.about_info {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 @media (max-width: 768px) {
