--- a/src/features/About/about.style.css
+++ b/src/features/About/about.style.css
@@ -1,7 +1,8 @@
 .about {
-  /* font-size: large;
-  font-weight: bold; */
   font-size: medium;
+}
+.about_title {
+  margin-top: 2em;
 }
 
 .about_profile {
@@ -18,9 +19,26 @@
   align-items: center;
 }
 
+.about_text {
+  text-align: justify;
+  text-indent: 5rem;
+}
+
 @media (max-width: 768px) {
-  .about svg {
-    max-width: 50%;
-    margin-top: 4em;
+  .about_info {
+    flex-direction: column;
+    gap: 1em;
+  }
+}
+
+@media (max-width: 576px) {
+  .about_profile {
+    width: 300px;
+    height: 300px;
+  }
+  @media (max-width: 576px) {
+    .about_title {
+      font-size: 2rem;
+    }
   }
 }
