--- a/src/index.css
+++ b/src/index.css
@@ -1,25 +1,23 @@
 :root {
-  /* font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif; */
   font-family: Poppins, sans-serif;
-
   line-height: 1.5;
-
   color: white;
-  background-color: #2c3d50;
+  background-color: #002332;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+#root {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
 }
-a:hover {
-  color: #535bf2;
+
+.read-the-docs {
+  color: #888;
 }
 
 body {
